--- a/index.html
+++ b/index.html
@@ -17,35 +17,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello!</title>
   </head>
-  <body class="">
-    <div class="container py-4">
-      <div class="">
-        <div class="">
+  <body class="m-0 p-0 d-flex justify-content-center align-items-center">
+    <div class="container text-start">
+      <div class="d-flex flex-wrap" style="gap: 5px">
+        <div
+          style="width: 48%"
+          class="card justify-content-center align-items-center"
+        >
           <img
             src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-            class=""
+            class="rounded-circle"
             style="width: 80px; height: 80px"
             alt="Avatar"
           />
-          <h5 class=""><strong>John Doe</strong></h5>
-          <button type="button" class="">Contact</button>
+          <h5 class="card-title pt-3"><strong>John Doe</strong></h5>
+          <button type="button" class="btn btn-outline-success">Contact</button>
         </div>
-        <div class="">
+        <div style="width: 48%" class="card p-2">
           <strong>My Progress</strong>
-          <ul class="">
-            <li class="">
-              <div class="">
+          <ul class="col">
+            <li
+              class="card-body d-flex justify-content-between align-items-start"
+            >
+              <div
+                class="d-flex justify-content-between align-items-center"
+                style="width: 100%"
+              >
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-                  alt=""
+                  alt="..."
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Django</p>
-                  <div class="">
+                <div class="d-flex flex-column" style="width: 90%; gap: 8px">
+                  <p class="fw-bold" style="margin: 0">Django</p>
+                  <div
+                    class="progress"
+                    role="progressbar"
+                    aria-label="Example with label"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 10%"
+                  >
                     <div
-                      class=""
+                      class="progress-bar bg-success"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -55,23 +71,36 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-success rounded-pill">&rarr;</span>
             </li>
           </ul>
-          <ul class="">
-            <li class="">
-              <div class="">
+          <ul class="col m-0">
+            <li
+              class="card-body d-flex justify-content-between align-items-start"
+            >
+              <div
+                class="d-flex justify-content-between align-items-center"
+                style="width: 100%"
+              >
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-                  alt=""
+                  alt="..."
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Flutter</p>
-                  <div class="">
+                <div class="d-flex flex-column" style="width: 90%; gap: 8px">
+                  <p class="fw-bold" style="margin: 0">Flutter</p>
+                  <div
+                    class="progress"
+                    role="progressbar"
+                    aria-label="Example with label"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 10%"
+                  >
                     <div
-                      class=""
+                      class="progress-bar bg-info"
                       role="progressbar"
                       style="width: 30%"
                       aria-valuenow="50"
@@ -81,23 +110,36 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-info rounded-pill">&rarr;</span>
             </li>
           </ul>
-          <ul class="">
-            <li class="">
-              <div class="">
+          <ul class="col m-0">
+            <li
+              class="card-body d-flex justify-content-between align-items-start"
+            >
+              <div
+                class="d-flex justify-content-between align-items-center"
+                style="width: 100%"
+              >
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-                  alt=""
+                  alt="..."
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Html</p>
-                  <div class="">
+                <div class="d-flex flex-column" style="width: 90%; gap: 8px">
+                  <p class="fw-bold" style="margin: 0">Html</p>
+                  <div
+                    class="progress"
+                    role="progressbar"
+                    aria-label="Example with label"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 10%"
+                  >
                     <div
-                      class=""
+                      class="progress-bar bg-danger"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -107,23 +149,36 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-danger rounded-pill">&rarr;</span>
             </li>
           </ul>
-          <ul class="">
-            <li class="">
-              <div class="">
+          <ul class="col m-0">
+            <li
+              class="card-body d-flex justify-content-between align-items-start"
+            >
+              <div
+                class="d-flex justify-content-between align-items-center"
+                style="width: 100%"
+              >
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-                  alt=""
+                  alt="..."
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">CSS</p>
-                  <div class="">
+                <div class="d-flex flex-column" style="width: 90%; gap: 8px">
+                  <p class="fw-bold" style="margin: 0">CSS</p>
+                  <div
+                    class="progress"
+                    role="progressbar"
+                    aria-label="Example with label"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 10%"
+                  >
                     <div
-                      class=""
+                      class="progress-bar bg-primary"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -133,89 +188,124 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-primary rounded-pill">&rarr;</span>
             </li>
           </ul>
         </div>
-        <div class="">
+        <div
+          style="width: 48%"
+          class="card p-3 d-flex justify-content-start flex-column align-items-start"
+        >
           <strong>Reach me</strong>
           <form>
-            <div class="">
-              <label for="exampleInputEmail1" class="">Email address</label>
+            <div class="p-3">
+              <label for="exampleInputEmail1" class="form-label d-flex"
+                >Email address</label
+              >
               <input
                 type="email"
-                class=""
+                class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
               />
-              <div id="emailHelp" class="">
+              <div id="emailHelp" class="form-text">
                 We'll never share your email with anyone else.
               </div>
             </div>
-            <div class="">
-              <label for="Subject" class="">Subject</label>
-              <textarea class="" id="Subject" rows="3"></textarea>
+            <div class="p-3">
+              <label for="Subject" class="form-label d-flex">Subject</label>
+              <textarea class="form-control" id="Subject" rows="3"></textarea>
             </div>
-            <div class="">
-              <label for="Country" class="">Country</label>
-              <select class="">
+            <div class="col-12 p-3">
+              <label for="Country" class="d-flex">Country</label>
+              <select class="form-select">
                 <option selected>Open this select menu</option>
                 <option value="1">Kuwait</option>
                 <option value="2">Other</option>
               </select>
             </div>
-            <div class="">
-              <input type="checkbox" class="" id="exampleCheck1" />
-              <label class="" for="exampleCheck1"
+            <div class="form-check p-3">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label d-flex" for="exampleCheck1"
                 >This is a business email</label
               >
             </div>
-            <button type="submit" class="">Submit</button>
+            <button type="submit" class="btn btn-success d-flex">Submit</button>
           </form>
         </div>
-        <div class="">
+        <div style="width: 48%" class="card p-3">
           <strong>My Blog</strong>
-          <div class="" style="height: auto; min-height: 450px">
-            <ol class="">
-              <li class="">
-                <div class="">
-                  <div class="">Article 1</div>
+          <div
+            class="card-body d-flex flex-column"
+            style="height: auto; min-height: 450px"
+          >
+            <ol
+              class="list-group list-group-numbered d-flex align-items-start pt-2"
+            >
+              <li
+                class="d-flex justify-content-between align-items-start pt-2"
+                style="width: 95%"
+              >
+                <div class="d-flex flex-column" style="width: 80%">
+                  <div class="fw-bold" style="margin: 0">Article 1</div>
                   Lorem
                 </div>
-                <span class="">10 mins read</span>
+                <span class="badge bg-success rounded-pill">10 mins read</span>
               </li>
-              <li class="">
-                <div class="">
-                  <div class="">Article 2</div>
+              <li
+                class="d-flex justify-content-between align-items-start pt-3"
+                style="width: 95%"
+              >
+                <div class="d-flex flex-column" style="width: 80%">
+                  <div class="fw-bold" style="margin: 0">Article 2</div>
                   Lorem
                 </div>
-                <span class="">15 mins read</span>
+                <span class="badge bg-success rounded-pill">15 mins read</span>
               </li>
-              <li class="">
-                <div class="">
-                  <div class="">Article 3</div>
+              <li
+                class="d-flex justify-content-between align-items-start pt-3"
+                style="width: 95%"
+              >
+                <div class="d-flex flex-column" style="width: 80%">
+                  <div class="fw-bold" style="margin: 0">Article 3</div>
                   Lorem
                 </div>
-                <span class="">7 mins read</span>
+                <span class="badge bg-success rounded-pill">7 mins read</span>
               </li>
             </ol>
-            <ul class="">
-              <li class="">
-                <a class="" href="#" tabindex="-1" aria-disabled="true"
+            <ul class="d-flex justify-content-center" style="padding-top: 30%">
+              <li class="col-3 d-flex text-center">
+                <a
+                  class="list-group-item list-group-item-action"
+                  href="#previous"
+                  tabindex="-1"
+                  aria-disabled="true"
                   >Previous</a
                 >
               </li>
-              <li class="">
-                <a class="" href="#">1</a>
+              <li class="col-1 d-flex text-center">
+                <a class="list-group-item list-group-item-action" href="#1"
+                  >1</a
+                >
               </li>
-              <li class="">
-                <a class="" href="#">2</a>
+              <li class="col-1 d-flex text-center">
+                <a class="list-group-item list-group-item-action" href="#2"
+                  >2</a
+                >
               </li>
-              <li class="">
-                <a class="" href="#">3</a>
+              <li class="col-1 d-flex text-center">
+                <a class="list-group-item list-group-item-action" href="#3"
+                  >3</a
+                >
               </li>
-              <li class="">
-                <a class="" href="#">Next</a>
+              <li class="col-3 d-flex text-center">
+                <a class="list-group-item list-group-item-action" href="#4"
+                  >Next</a
+                >
               </li>
             </ul>
           </div>
